--- a/app/src/main/res/layout/activity_study_mega12.xml
+++ b/app/src/main/res/layout/activity_study_mega12.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="490dp"
         android:layout_marginBottom="0dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
