--- a/app/src/main/res/layout/activity_mega_follow_8qr.xml
+++ b/app/src/main/res/layout/activity_mega_follow_8qr.xml
@@ -28,6 +28,17 @@
             android:layout_gravity="center"
             app:srcCompat="@drawable/exqrimage" />
 
+        <Button
+            android:id="@+id/btn_goToHome"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#D8D3FF"
+            android:text="홈으로"
+            android:textColor="#000000"
+            android:textSize="30sp" />
+
 
     </LinearLayout>
 
