--- a/app/src/main/res/layout/activity_mega_light_coffee6.xml
+++ b/app/src/main/res/layout/activity_mega_light_coffee6.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StudyMega9">
+
     <ImageView
         android:id="@+id/imageMega9"
         android:layout_width="0dp"
@@ -19,15 +20,15 @@
 
     <Button
         android:id="@+id/btnMega9"
-        android:layout_width="165dp"
-        android:layout_height="75dp"
-        android:layout_marginLeft="132dp"
+        android:layout_width="174dp"
+        android:layout_height="84dp"
+        android:layout_marginLeft="128dp"
         android:layout_marginBottom="60dp"
         android:backgroundTint="#4DFFEB3B"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.938" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -40,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMega9">
+        app:layout_constraintTop_toBottomOf="@+id/imageMega9">
 
         <Button
             android:id="@+id/btn_video"
